fix build instructions (#36)
* build fixes

* update README with new instructions

* newline fixes